package version1;

public class ExosOO_version1 {

    public static void main(String[] args) {
        BankingSystem bankingSystem = new BankingSystem();
        bankingSystem.transfer(50, "c1", "c2");
    }
}
