 @startuml
skinparam classAttributeIconSize 0

class ExosOO_version1 {
{static} main(args:String[]):void
}

class BankingSystem {
BankingSystem()
transfer(amount:double, debitAccountNumber:String, creditAccountNumber:String):void

}

class Account {

accountNumber:String
balance:double

Account(accountNumber:String, balance:double)
credit(amount:double):void
debit(amount:double):void
+toString():String
}

BankingSystem --> "1" Account : account1
BankingSystem --> "1" Account : account2
ExosOO_version1 .> BankingSystem : <<create>>

@enduml